# template_test

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  template_test.sln
scripts/: build.bat  clone_repository.bat
template_test/: CMakeLists.txt  prj.conf  template_test.vgdbproj
template_test/src/: api.c  api.h  main.c
